--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,11 +20,11 @@
                     <a class="page-scroll" href="#about">About</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#services">Services</a>
+                    <a class="page-scroll" href="#services">Portfolio</a>
                 </li>
-                <li>
+                <!-- <li>
                     <a class="page-scroll" href="#contact">Contact</a>
-                </li>
+                </li> -->
                 <li>
                     <a href=tel:+19704452616>(970) 445-2616 </a>
                 </li>
@@ -49,7 +49,7 @@
 
 						<hr class="intro-divider">
             <li>
-              <img src="/img/favicon.png" alt="Vigeo Logo" class="center">
+              <!-- <img src="/img/favicon.png" alt="Vigeo Logo" class="center"> -->
             </li>
 						<ul class="list-inline intro-social-buttons">
 							{% for social in site.social %}
