--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -4,7 +4,7 @@
 
 			<div class="row">
 				<div class="col-lg-6">
-					<h2>Let's chat:</h2>
+					<!-- <h2>Let's chat:</h2>
 					<p></p>
 					<h3>Send us a <a href="mailto:sales@vigeoconstruction.com?Subject=Vigeo%20Consulting%20quick%20chat" target="_top">note</a> or give us a <a href="tel:+19704452616">ring</a>.</h3>
 				</div>
@@ -15,7 +15,7 @@
 							<!-- <a href="{{ social.url }}" class="btn btn-default btn-lg"><i class="fa fa-{{ social.title }} fa-fw"></i> <span class="network-name">{{ social.title }}</span></a> -->
 						</li>
 						{% endfor %}
-					</ul>
+					</ul> -->
 				</div>
 			</div>
 
