--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,7 +23,7 @@
                     <a class="page-scroll" href="#services">Portfolio</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#contact">Contact</a>
+                    <a class="page-scroll" href="mailto:joshua@vigeoconstruction.com">Contact</a>
                 </li>
                 <li>
                     <a href=tel:+19704452616>(970) 445-2616 </a>
