--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
-                        <a href="mailto:joshua@vigeoconstruction.com">Contact</a>
+                        <a href="mailto:joshua@vigeoconstruction.com?Subject=Vigeo%20Corp">Contact</a>
                     </li>
                 </ul>
                 <p class="copyright text-muted small">{{ site.copyright }}</p>
